--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,132 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- TODO: Add title -->
-  <title>Document title</title>
-  <link rel="stylesheet" href="./style.scss">
-  <script src="./main.js"></script>
-</head>
-<body>
-  Template
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hayat Estate</title>
+    <link rel="stylesheet" href="./styles/all.scss">
+    <link rel="icon" href="./images/favicon_hayat.png">
+    <!-- <script src="./main.js"></script> -->
+  </head>
+  <body>
+    <div class="page">
+      <header class="page__header header">
+        <section class="header__top top">
+          <img
+            src="./images/logo_hayat.jpg"
+            alt="Logo Hayat Estate"
+            class="top__logo"
+          >
+          <nav class="nav">
+            <input
+              type="checkbox"
+              id="small-menu"
+              name="toggle"
+              class="nav__input"
+            >
+            <div class="nav__menu">
+              <ul class="nav__list nav__list--left menu">
+                <li class="menu__item">
+                  <a
+                    href="#"
+                    class="menu__link"
+                  >
+                    О предложении
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">
+                    Преимущества работы
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">
+                    О компании
+                  </a>
+                </li>
+                <li class="menu__item">
+                  <a
+                    href="#" class="menu__link"
+                  >
+                    Кейсы
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav__list nav__list--center contacts">
+                <li class="contacts__item">
+                  <a
+                    href="tel:+380-(67)-111-11-11"
+                    class="contacts__link contacts__link--top"
+                  >
+                    +380 (67) 111 11 11
+                  </a>
+                </li>
+                <li class="contacts__item">
+                  <a
+                    href="mailto:email@site.com"
+                    class="contacts__link contacts__link--bottom"
+                  >
+                    email@site.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="nav__list nav__list--right social">
+                <li class="social__item">
+                  <a
+                    href="viber://add?number=380671111111"
+                    class="social__link social__link--viber"
+                  >
+                    Viber
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=380671111111"
+                    class="social__link social__link--whatsapp"
+                  >
+                    WhatsApp
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a
+                    href="tg://resolve?domain=Hayat_Estate"
+                    class="social__link social__link--telegram"
+                  >
+                    Telegram
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <label for="small-menu" class="nav__toggle"></label>
+          </nav>
+        </section>
+        <section class="header__info info">
+          <div class="info__block">
+            <p class="info__content">
+              Комплексное сопровождение процесса покупки недвижимости за границей для Ваших клиентов
+            </p>
+            <button class="info__button">
+              О предложении
+            </button>
+          </div>
+          <div class="info__images">
+            <div class="info__square">
+            </div>
+            <div class="info__image">
+              <img
+                src="./images/header_photo.jpg"
+                alt="House with keys"
+                class="info__photo"
+              >
+            </div>
+            <div class="info__dots">
+              <img src="./images/dots.png" alt="dots">
+            </div>
+            <div class="info__rectangle"></div>
+          </div>
+        </section>
+      </header>
+    </div>
+  </body>
 </html>
