--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,34 @@
                     +380 (67) 111 11 11
                   </a>
                 </li>
+                <li class="contacts__item contacts__item--hidden">
+                  <ul class="nav__list nav__list--right ">
+                    <li class="social__item">
+                      <a
+                        href="viber://add?number=380671111111"
+                        class="social__link social__link--viber"
+                      >
+                        Viber
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a
+                        href="https://api.whatsapp.com/send?phone=380671111111"
+                        class="social__link social__link--whatsapp"
+                      >
+                        WhatsApp
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a
+                        href="tg://resolve?domain=Hayat_Estate"
+                        class="social__link social__link--telegram"
+                      >
+                        Telegram
+                      </a>
+                    </li>
+                  </ul>
+                </li>
                 <li class="contacts__item">
                   <a
                     href="mailto:email@site.com"
